# filecounter-to-lear-rust

./: Cargo.toml  README.md
.github/workflows/: rust-build-test.yml
src/: file_counter.rs  main.rs
tests/: integration_tests.rs
